--- a/index.html
+++ b/index.html
@@ -426,12 +426,13 @@
     });
 
     $(document).on('dblclick', '#Tab1', function(){
+        var sourceText = document.getElementById("Tab1").textContent;
         $('#Tab1').replaceWith('<input class="homeTab nav-item nav-link bg-white active" id="Tab1" data-toggle="tab" href="#nav-tab1" role="tab" aria-controls="nav-tab1" aria-selected="true" style="margin-right: .25rem;">')
+        $('#Tab1').focus();
         $('#Tab1').keydown(function(e) {
             if(e.keyCode == 13) {
                 var newText = $(this).val();
-                var currentText;
-                if (newText != " ") {
+                if (newText != "") {
                     currentText = newText;
                 }
                 else{
@@ -442,41 +443,75 @@
             }
         });
         $('#Tab1').focusout(function(){
-            var text = $(this).val();
+            var newText = $(this).val();
+                if (newText != "") {
+                    currentText = newText;
+                }
+                else{
+                    currentText = sourceText;
+                }
             $('#Tab1').replaceWith('<a class="homeTab nav-item nav-link bg-white active" id="Tab1" data-toggle="tab" href="#nav-tab1" role="tab" aria-controls="nav-tab1" aria-selected="true" style="margin-right: .25rem;"></a>')
-            $('#Tab1').text(text);
+            $('#Tab1').text(currentText);
         });
     });
 
     $(document).on('dblclick', '#Tab2', function(){
+        var sourceText = document.getElementById("Tab2").textContent;
         $('#Tab2').replaceWith('<input class="homeTab nav-item nav-link bg-white active" id="Tab2" data-toggle="tab" href="#nav-tab2" role="tab" aria-controls="nav-tab2" aria-selected="false" style="margin-right: .25rem;">')
+        $('#Tab2').focus();
         $('#Tab2').keydown(function(e) {
             if(e.keyCode == 13) {
-                var text = $(this).val();
+                var newText = $(this).val();
+                if (newText != "") {
+                    currentText = newText;
+                }
+                else{
+                    currentText = sourceText;
+                }
                 $('#Tab2').replaceWith('<a class="homeTab nav-item nav-link bg-white active" id="Tab2" data-toggle="tab" href="#nav-tab2" role="tab" aria-controls="nav-tab2" aria-selected="false" style="margin-right: .25rem;"></a>')
-                $('#Tab2').text(text);
+                $('#Tab2').text(currentText);
             }
         });
         $('#Tab2').focusout(function(){
-            var text = $(this).val();
+            var newText = $(this).val();
+                if (newText != "") {
+                    currentText = newText;
+                }
+                else{
+                    currentText = sourceText;
+                }
             $('#Tab2').replaceWith('<a class="homeTab nav-item nav-link bg-white active" id="Tab2" data-toggle="tab" href="#nav-tab2" role="tab" aria-controls="nav-tab2" aria-selected="false" style="margin-right: .25rem;"></a>')
-            $('#Tab2').text(text);
+            $('#Tab2').text(currentText);
         });
     });
 
     $(document).on('dblclick', '#Tab3', function(){
+        var sourceText = document.getElementById("Tab3").textContent;
         $('#Tab3').replaceWith('<input class="homeTab nav-item nav-link bg-white active" id="Tab3" data-toggle="tab" href="#nav-tab3" role="tab" aria-controls="nav-tab3" aria-selected="false">')
+        $('#Tab3').focus();
         $('#Tab3').keydown(function(e) {
             if(e.keyCode == 13) {
-                var text = $(this).val();
+                var newText = $(this).val();
+                if (newText != "") {
+                    currentText = newText;
+                }
+                else{
+                    currentText = sourceText;
+                }
                 $('#Tab3').replaceWith('<a class="homeTab nav-item nav-link bg-white active" id="Tab3" data-toggle="tab" href="#nav-tab3" role="tab" aria-controls="nav-tab3" aria-selected="false"></a>')
-                $('#Tab3').text(text);
+                $('#Tab3').text(currentText);
             }
         });
         $('#Tab3').focusout(function(){
-            var text = $('#Tab3').val();
+            var newText = $(this).val();
+                if (newText != "") {
+                    currentText = newText;
+                }
+                else{
+                    currentText = sourceText;
+                }
             $('#Tab3').replaceWith('<a class="homeTab nav-item nav-link bg-white active" id="Tab3" data-toggle="tab" href="#nav-tab3" role="tab" aria-controls="nav-tab3" aria-selected="false"></a>')
-            $('#Tab3').text(text);
+            $('#Tab3').text(currentText);
         });
     });
 
